fix sidebar overflow

--- a/resources/css/sidebar.css
+++ b/resources/css/sidebar.css
@@ -21,9 +21,9 @@
     height: 100dvh;
 
     box-sizing: border-box;
-    border-right: 1px var(--color-neutral-600) solid;
+    border-right: 0 var(--color-neutral-600) solid;
 
-    @apply bg-neutral-900 md:max-w-sm transition-transform;
+    @apply bg-neutral-900 md:max-w-sm md:border-r transition-transform;
 
     &.closed {
         transform: translateX(-100%);
@@ -49,6 +49,8 @@
     >.content {
         flex-direction: column;
         flex-grow: 1;
+        flex-shrink: 1;
+        overflow: auto;
     }
 
     >.settings-btn {
